# autotools-jupiter

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  configure.ac
common/: Makefile.am  print.c  test_print.c
include/: Makefile.am
libjup/: Makefile.am  jup_print.c
src/: Makefile  Makefile.am  Makefile.in  main.c
tests/: Makefile.am  jupiter.at  local.at
